--- a/app/assets/javascripts/spina/admin/summernote-extensions.js.erb
+++ b/app/assets/javascripts/spina/admin/summernote-extensions.js.erb
@@ -430,6 +430,9 @@
               var webmRegExp = /^.+.(webm)$/;
               var webmMatch = url.match(webmRegExp);
 
+              var livestreamRegExp = /(.+livestream\.com\/accounts\/\w*\/events\/\w*\/player\?[a-zA-Z=&0-9]*)/;
+              var livestreamMatch = url.match(livestreamRegExp);
+
               var $responsivevideo;
                $responsivevideo= $('<div>');
                $responsivevideo.addClass('embed-container');
@@ -469,6 +472,12 @@
                     .attr('height', '498')
                     .attr('width', '510')
                     .attr('src', '//player.youku.com/embed/' + youkuMatch[1]);
+              } else if (livestreamMatch && livestreamMatch[0].length) {
+                $video = $('<iframe allowfullscreen>')
+                    .attr('frameborder', 0)
+                    .attr('scrolling', 'no')
+                    .attr('src', livestreamMatch[0])
+                    .attr('width', '640').attr('height', '360')
               } else if (mp4Match || oggMatch || webmMatch) {
                 $video = $('<video controls>')
                     .attr('src', url)
